// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | Padded should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="Padded-sc-q6j7xl-0 llxRKk"
  />
</DocumentFragment>
`;

exports[`components | Padded should match the snapshot with attributes 1`] = `
<DocumentFragment>
  <div
    class="Padded-sc-q6j7xl-0 cUZIng"
  />
</DocumentFragment>
`;
